--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,7 @@ body{
     left: 10px;
     margin: 0;
     padding: 0;
-    font-size: 3vh;
+    font-size: 2vmax;
     font-weight: bold;
     border: none;
     outline: none;
@@ -38,7 +38,7 @@ nav{
 #menu-ul li{
     list-style-type: none;
     margin: 0;
-    font-size: 2vh;
+    font-size: 1vmax;
 }
 
 a{
@@ -50,7 +50,7 @@ a{
     text-decoration: none;
     color: black;
     display: block;
-    padding: 1vh;
+    padding: 1vmax;
 }
 
 #menu-ul{
@@ -84,12 +84,12 @@ article {
 
 h1, h2 {
     text-align: center;
-    font-size: 6vh;
+    font-size: 3vmax;
 }
 
 h3 {
     margin-top: 70px;
-    font-size: 5vh;
+    font-size: 2.5vmax;
 }
 
 h3::before {
@@ -101,7 +101,7 @@ h3::before {
 
 p {
     text-align: justify;
-    font-size: 3.5vh;
+    font-size: 2vmax;
 }
 
 pre {
@@ -110,7 +110,7 @@ pre {
     border: 1px solid #909090;
     border-radius: 5px;
     overflow: hidden;
-    font-size: 2vh;
+    font-size: 1.5vmax;
 }
 
 td, th {
@@ -152,7 +152,7 @@ p>a {
 
 #lista-github {
     list-style-type: none;
-    font-size: 3vh;;
+    font-size: 1.5vmax;
 }
 
 em {
