split css file, fixed menu btn bg

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,160 +1,4 @@
-* {
-    box-sizing: border-box;
-}
-
-body{
-    margin: 0;
-    padding: 0;
-    display: flex;
-    font-family: 'Courier New', Courier, monospace;
-}
-
-/*----------------------------------*/
-
-#menu-btn{
-    color: rgb(12, 72, 163);
-    background-color: transparent;
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    margin: 0;
-    padding: 0;
-    font-size: 2vmax;
-    font-weight: bold;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    z-index: 5;
-}
-
-nav{
-    width: 250px;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    padding-top: 0px;
-    overflow-y: scroll;
-}
-
-#menu-ul li{
-    list-style-type: none;
-    margin: 0;
-    font-size: 1vmax;
-}
-
-a{
-    text-decoration: none;
-    color: black;
-}
-
-#menu-ul li a{
-    text-decoration: none;
-    color: black;
-    display: block;
-    padding: 1vmax;
-}
-
-#menu-ul{
-    background-color: #e5e5e5;
-    margin: 0;
-    padding: 50px 0 0 0;
-    min-height: 100vh;
-    border-right: 1px solid black;
-    
-}
-
-#menu-ul li a:hover{
-    background-color: #d0d0d0;
-}
-
-/*----------------------------------*/
-  
-main{
-    width: 100vw;
-    padding: 20px 70px 20px 320px;
-    overflow: auto;
-    margin: 0;
-}
-
-article {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding-bottom: 300px;
-}
-
-h1, h2 {
-    text-align: center;
-    font-size: 3vmax;
-}
-
-h3 {
-    margin-top: 70px;
-    font-size: 2.5vmax;
-}
-
-h3::before {
-    width: 1px;
-    height: 3vh;
-    content: "> ";
-    text-align: left;
-}
-
-p {
-    text-align: justify;
-    font-size: 2vmax;
-}
-
-pre {
-    background-color: #f5f8e2;
-    color: #505050;
-    border: 1px solid #909090;
-    border-radius: 5px;
-    overflow: hidden;
-    font-size: 1vmax;
-}
-
-td, th {
-    border: 1px solid black;
-    padding: 5px;
-}
-
-table{
-    border-collapse: collapse;
-    margin: 30px 0;
-}
-
-@media only screen and (max-width: 640px) {
-    nav{
-        width: 100%;
-    }
-    #menu-ul{
-        border-right: none;
-        min-height: 100vh;
-    }
-    body{
-        display: inherit;
-    }
-}
-
-.hcores {
-    text-align: left;
-    margin: 20px 0;
-}
-
-.hcores::before {
-    content: none;
-}
-
-p>a {
-    color: rgb(151, 2, 151);
-    font-weight: bold;
-}
-
-#lista-github {
-    list-style-type: none;
-    font-size: 1.5vmax;
-}
-
-em {
-    color: rgb(190, 86, 1);
-}
+@import "corpo.css";
+@import "geral.css";
+@import "menu.css";
+@import "mobile.css";
